[gd_scene load_steps=2 format=3 uid="uid://dfwpg3svb3s0h"]

[ext_resource type="Script" path="res://scripts/multiplayer_controller.gd" id="1_aggah"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aggah")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 272.0
offset_right = 114.0
offset_bottom = 295.0
text = "IP"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 272.0
offset_right = 547.0
offset_bottom = 295.0
text = "Port"

[node name="ip_field" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 295.0
offset_right = 439.0
offset_bottom = 326.0
text = "127.0.0.1"

[node name="port_field" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 295.0
offset_right = 657.0
offset_bottom = 326.0
text = "7777"
virtual_keyboard_type = 2

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 196.0
offset_right = 226.0
offset_bottom = 244.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 194.0
offset_right = 440.0
offset_bottom = 242.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 195.0
offset_right = 658.0
offset_bottom = 243.0
text = "Start Game"

[node name="username_field" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 149.0
offset_right = 658.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 126.0
offset_right = 115.0
offset_bottom = 149.0
text = "Username"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 58.0
offset_right = 759.0
offset_bottom = 81.0
text = "Player Color"

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 93.0
offset_right = 971.0
offset_bottom = 669.0
edit_alpha = false
color_mode = 1
picker_shape = 2
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 365.0
offset_right = 70.0
offset_bottom = 388.0
text = "Local IP:"

[node name="localIP_label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 396.0
offset_right = 158.0
offset_bottom = 419.0
text = "127.0.0.1"

[connection signal="text_changed" from="ip_field" to="." method="_on_ip_field_text_changed"]
[connection signal="text_changed" from="port_field" to="." method="_on_port_field_text_changed"]
[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
